--- a/bitrix/templates/main/map.html
+++ b/bitrix/templates/main/map.html
@@ -17,7 +17,7 @@
           <label class="hamburger js-menu-open" for="hamburger" id=""><span></span><span></span><span></span></label>
         </div>
       </header>
-      <h3 class="header__text-iphone">+375 29 000 00 00</h3>
+      <h3 class="header__text-iphone header__text-iphone-border">+375 29 000 00 00</h3>
       <ul>
         <li><a href="/" style="true">Главная </a></li>
         <li><a href="/about-quarter.html">О кедровом квартале</a></li>
