--- a/src/pug/filters-resalt-item.pug
+++ b/src/pug/filters-resalt-item.pug
@@ -21,7 +21,7 @@ block content
 				p Кедровый квартал
 				img(src='img/house-shema.png')
 				div.wrapp-btn
-					+btn('btn-green btn-uppercase btn-center js_form_order','Оставить заявку')
+					+btn('btn-green btn-uppercase btn-center js_form_order-open','Оставить заявку')
 				ul
 					li
 						h4 Дом 
