--- a/src/sass/_filters.scss
+++ b/src/sass/_filters.scss
@@ -1,16 +1,24 @@
 .wrapp_filters {
 	background-color: $prime-color;
 	margin: 20px;
-	padding: 50px 60px;
+	padding: 30px 60px 60px 60px;
 	color: #fff;
 	.filters-h3 {
 		text-align: center;
+		svg {
+			width: 30px;
+		    height: 30px;
+		    fill: #fff;
+		    display: inline-block;
+		    position: relative;
+		    top: 7px;
+		    margin-left: 15px;
+		}
 	}
 	.tabs {
 		margin: 30px 0;
 	}
 	.tabs-content_filters {
-		margin: 0 0 70px 0;
 		.tabs-fast, .tabs-deployed {
 			.wrapp-search-btn {
 				text-align: center;
@@ -22,7 +30,8 @@
 					justify-content: space-between;
 					align-items: center;
 					flex-wrap: wrap;
-					padding: 25px 0;
+					// padding: 25px 0;
+					padding-bottom: 45px;
 					.filter-text {
 						flex-basis: 32%;
 						padding-left: 10px;
@@ -35,7 +44,9 @@
 							}
 						}
 						.filter-text_secondary {
-							color: #000;
+							color: #757e1f;
+							position: relative;
+    						top: -5px;
 							span,input {
 								background-color: rgba(0,0,0,0);
 								font-size: 1.5rem;
@@ -49,7 +60,7 @@
 				}
 			}
 			.btn {
-				margin: 50px auto 20px;
+				margin: 20px auto 20px;
 			}
 			.link_reset {
 				color: #757e1f;
@@ -68,7 +79,7 @@ label.checkbox-custom {
 	background-color: rgba(0,0,0,0);
 	border-radius: 50%;
 	color: #757e1f;
-	padding: 12px 21px;
+	padding: 6px 15px;
     font-family: pf_medium;
     margin-right: 5%;
     font-size: 2.5rem;
@@ -123,11 +134,12 @@ input[type=checkbox]:checked + label.checkbox-custom {
 			}
 			p {
 				padding-top: 10px;
+				color: $grey_dark;
 			}
 		}
 	}
 	.body-resalt {
-		margin: 70px 0 60px;
+		margin: 60px 0 60px;
 		.list-items-resalts {
 			.item-resalts {
 				a{
@@ -141,7 +153,7 @@ input[type=checkbox]:checked + label.checkbox-custom {
 					color: #000;
 				}
 				.wrapp-img {
-					flex-basis: 15%;
+					flex-basis: 20%;
 					img {
 						width: 100%;
 					}
@@ -153,16 +165,17 @@ input[type=checkbox]:checked + label.checkbox-custom {
 					justify-content: space-between;
 					align-items: center;
 					flex-wrap: wrap;
-					padding: 0 20px;	
+					padding: 0 20px;
 					div {
 						flex-basis: 70%;
     					flex-grow: 1;
+    					padding-right: 15px;
 					}
 					p {
 						color: $grey;
 					}
 					.price {
-						
+						font-family: $font_r;
 					}
 				}
 				
@@ -185,7 +198,7 @@ label.checkbox-custom__check:after {
     margin-right: 5%;
     font-size: 0rem;
     border: 2px solid $grey;
-	padding: 20px;
+	padding: 15px;
 	border-radius: 5px;
 	background-image: url(../img/icons/check.png);
 	background-size: 85%;
@@ -195,7 +208,7 @@ label.checkbox-custom__check:after {
     width: 20px;
     height: 20px;
     position: absolute;
-    margin-top: -38px;
+    margin-top: -35px;
     margin-left: -52px;
 }
 
@@ -210,18 +223,18 @@ input[type=checkbox]:checked + label.checkbox-custom__check:after {
 
 
 .wrapp_filter_result_item {
-	margin: 70px 20px;
+	margin: 40px 20px;
 	p {
 		color: $grey;
 	}
 	img {
 		width: 100%;
 		max-width: 100%;
-		margin: 40px 0 70px 0;
+		margin: 40px 0;
 	}
 	
 	.wrapp-btn  {
-		margin-bottom: 70px;
+		margin-bottom: 40px;
 		text-align: center;
 	}
 	ul {
@@ -253,3 +266,66 @@ input[type=checkbox]:checked + label.checkbox-custom__check:after {
 }
 
 
+//ui-select
+.selectUi {
+	width: 100% !important;
+}
+.ms-choice {
+	padding: 24px 0;
+	border: 1px solid #fff;
+	background-color: rgba(0,0,0,0);
+}
+.ms-choice>span  {
+	font-family: $font_r;
+	font-size: 2.4rem;
+	color: #757e1f;
+	padding-top: 12px;
+	width: 85%;
+	padding-left: 15px;
+}
+
+.ms-drop ul {
+	padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.ms-drop ul>li.selected {
+	color: #757e1f;
+	background-image: url('../img/icons/check.png');
+	background-repeat: no-repeat;
+	background-position: 100% 50%;
+	background-size: 6%;
+}
+
+.ms-drop ul>li span{
+	width: 93%;
+	overflow: hidden;
+	display: block;
+	text-overflow: ellipsis;
+}
+
+.ms-drop ul>li {
+	color: $prime-color;
+	font-size: 2.4rem;
+}
+
+
+.ms-drop.bottom {
+	margin-top: 2px;
+}
+.ms-choice>div  {
+	background-image: url('../img/icons/arrow-down.png');
+	top: 23px;
+    right: 12px;
+    width: 15px;
+    height: 15px;
+    background-size: 70%;
+}
+.ms-choice>div.open {
+	background: url('../img/icons/arrow-down.png') 0 0 no-repeat;
+    background-size: 70%;
+}
+
+.ms-choice>span.placeholder {
+	color: #757e1f;
+}
