--- a/src/sass/screen.sass
+++ b/src/sass/screen.sass
@@ -9,6 +9,8 @@
 @import lib/jquery-ui/jquery-ui
 @import lib/jquery-ui/jquery-ui-structure
 @import lib/jquery-ui/jquery-ui-theme
+@import lib/multiple_select
+
 
 //
 @import primary
