--- a/src/pug/includes/_header.pug
+++ b/src/pug/includes/_header.pug
@@ -8,4 +8,4 @@ header.header
 			span
 			span
 			span
-h3.header__text-iphone +375 29 000 00 00
+h3.header__text-iphone.header__text-iphone-border +375 29 000 00 00
