--- a/src/pug/includes/_modal.pug
+++ b/src/pug/includes/_modal.pug
@@ -3,24 +3,24 @@ div.menu_mobile.modal.js_modal_mobile_open
 	div.footer.footer__menu
 		div.wrapp-menu-logo
 			img.menu-logo(src='img/logo_white.png' alt='logo' )
-			p.js_form_order <svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 54.3 54.4" enable-background="new 0 0 54.3 54.4" xml:space="preserve"><path fill-rule="evenodd" clip-rule="evenodd" d="M0.7,4.8l2.5-2.5l48.8,48.8l-2.5,2.5L0.7,4.8z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M3.2,2.3L5.5,0l48.8,48.8l-2.3,2.3L3.2,2.3z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M49.2,0.4l2.5,2.5L2.5,52.1L0,49.6L49.2,0.4z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M51.6,2.9L54,5.2L4.8,54.4l-2.4-2.4L51.6,2.9z"/></svg>
+			p.js_form_order-close <svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 54.3 54.4" enable-background="new 0 0 54.3 54.4" xml:space="preserve"><path fill-rule="evenodd" clip-rule="evenodd" d="M0.7,4.8l2.5-2.5l48.8,48.8l-2.5,2.5L0.7,4.8z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M3.2,2.3L5.5,0l48.8,48.8l-2.3,2.3L3.2,2.3z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M49.2,0.4l2.5,2.5L2.5,52.1L0,49.6L49.2,0.4z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M51.6,2.9L54,5.2L4.8,54.4l-2.4-2.4L51.6,2.9z"/></svg>
 
 		div.menu-title
 			
 			form.js_submit_form
-				div.success_submit.hidden 
+				div.success_submit.js_success_submit 
 					h3 Спасибо!
-				div.form_fields
+				div.form_fields.js_form_fields
 					h3.border-bottom Заявка
 					div.field
 						h4 Имя
-						input.btn-white_white-border(type='text' name="user" data-validation="length alphanumeric" data-validation-length="3-50")
+						input.btn-white_white-border(type='text' name="user" data-validation="length alphanumeric" data-validation-length="3-50" autocomplete="off")
 					div.field
 						h4 Телeфон
-						input.btn-white_white-border.chars(type='tel' data-validation="length" data-validation-length="6-50")
+						input.btn-white_white-border.chars(type='tel' data-validation="length" data-validation-length="6-50" autocomplete="off")
 					div.field
 						h4 E-mail
-						input.btn-white_white-border(data-validation="email" type="text" name="email")
+						input.btn-white_white-border(data-validation="email" type="text" name="email" autocomplete="off")
 					div.field
 						h4 Сообщение
 						textarea.btn-white_white-border(rows='10' data-validation="length" data-validation-length="max1000")
