--- a/src/sass/lib/_sprite.sass
+++ b/src/sass/lib/_sprite.sass
@@ -1,4 +1,5 @@
 $icons: (0:0)
+$icons: map-merge($icons,(arrow-down: (X: -54px, Y:-9px, W: 20px, H: 9px, TW: 101px, TH: 47px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(check: (X: 0px, Y:0px, W: 50px, H: 38px, TW: 101px, TH: 47px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(codedby: (X: -54px, Y:0px, W: 47px, H: 5px, TW: 101px, TH: 47px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(coderiver: (X: 0px, Y:-42px, W: 49px, H: 5px, TW: 101px, TH: 47px, IMG: '../img/icons.png')))
@@ -37,6 +38,12 @@ $icons: map-merge($icons,(coderiver: (X: 0px, Y:-42px, W: 49px, H: 5px, TW: 101p
 @mixin sr($i)
 	+sprite-retina($i)	
 
+//
+//.icon-arrow-down
+//	width: 20px
+//	height: 9px
+//	background-image: url('../img/icons.png')
+//	background-position: -54px -9px
 //
 //.icon-check
 //	width: 50px
