--- a/bitrix/templates/main/about-quarter.html
+++ b/bitrix/templates/main/about-quarter.html
@@ -102,22 +102,43 @@
             <p>И конечно же, Кедровому кварталу присущи все свойства и характеристики района в целом!</p>
           </div>
         </section>
-        <section class="title-back_link">
-          <div class="back_link"><a class="links" href="/">
-               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 135 100"><path d="m43.49579,3.54208c1.87973,-1.87971 4.83902,-1.87971 6.71872,0c1.81622,1.81622 1.81622,4.83902 0,6.651l-34.06784,34.06787l112.41928,0c2.62061,0 4.77127,2.08295 4.77127,4.70354c0,2.62061 -2.15067,4.77129 -4.77127,4.77129l-112.41928,0l34.06784,34.00435c1.81622,1.87971 1.81622,4.90675 0,6.71873c-1.8797,1.87973 -4.83899,1.87973 -6.71872,0l-42.13289,-42.13287c-1.81622,-1.81622 -1.81622,-4.83902 0,-6.651l42.13289,-42.1329l0,-0.00001z" stroke-width="0"/></svg><span> Назад на главную</span></a></div>
+        <section class="title-about_menu __margin-20">
+          <div class="wrapp-house">
+                      <div class="house">
+                        <h4 class="house-title">Дом 6</h4>
+                        <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt"><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a>
+                      </div>
+                      <div class="house">
+                        <h4 class="house-title">Дом 6</h4>
+                        <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt"><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a>
+                      </div>
+                      <div class="house">
+                        <h4 class="house-title">Дом 6</h4>
+                        <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt"><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a>
+                      </div>
+          </div>
+          <div class="wrapp_about_menu">
+            <h3>Кедровый квартал</h3>
+            <ul>
+              <li class="active"><a href="#">О квартале</a></li>
+              <li><a href="#">Цены и условия</a></li>
+              <li><a href="#">Фотогалерея</a></li>
+            </ul>
+          </div>
         </section>
       </div>
       <footer class="footer footer__footer">
-        <ul class="links_quarter">
-          <li> 
-            <h3> <a href="#">Кедровый квартал</a></h3>
-          </li>
+        <h3 class="js-title-kedr-menu">Кедровый квартал</h3>
+        <ul class="links_quarter js-title-kedr-content">
           <li> <a href="#">О квартале</a></li>
           <li> <a href="#">Цены и условия</a></li>
           <li> <a href="#">Фотогалерея</a></li>
-          <li> 
-            <h3> <a href="#">Сосновый квартал</a></h3>
-          </li>
+        </ul>
+        <h3 class="js-title-sosn-menu">Сосновый квартал</h3>
+        <ul class="links_quarter js-title-sosn-content">
+          <li> <a href="#">О квартале</a></li>
+          <li> <a href="#">Цены и условия</a></li>
+          <li> <a href="#">Фотогалерея</a></li>
         </ul>
         <ul class="links_all">
           <li> 
