--- a/bitrix/templates/main/map.html
+++ b/bitrix/templates/main/map.html
@@ -32,16 +32,17 @@
         <li><a href="/price.html">Цена</a></li>
       </ul>
       <footer class="footer footer__footer">
-        <ul class="links_quarter">
-          <li> 
-            <h3> <a href="#">Кедровый квартал</a></h3>
-          </li>
+        <h3 class="js-title-kedr-menu">Кедровый квартал</h3>
+        <ul class="links_quarter js-title-kedr-content">
           <li> <a href="#">О квартале</a></li>
           <li> <a href="#">Цены и условия</a></li>
           <li> <a href="#">Фотогалерея</a></li>
-          <li> 
-            <h3> <a href="#">Сосновый квартал</a></h3>
-          </li>
+        </ul>
+        <h3 class="js-title-sosn-menu">Сосновый квартал</h3>
+        <ul class="links_quarter js-title-sosn-content">
+          <li> <a href="#">О квартале</a></li>
+          <li> <a href="#">Цены и условия</a></li>
+          <li> <a href="#">Фотогалерея</a></li>
         </ul>
         <ul class="links_all">
           <li> 
