--- a/src/pug/includes/_footer.pug
+++ b/src/pug/includes/_footer.pug
@@ -1,19 +1,22 @@
 include _btn
 include _a
 footer.footer.footer__footer
-	ul.links_quarter
-		li 
-			h3 
-				a(href='#') Кедровый квартал
+	h3.js-title-kedr-menu Кедровый квартал
+	ul.links_quarter.js-title-kedr-content
 		li 
 			a(href='#') О квартале
 		li 
 			a(href='#') Цены и условия
 		li 
 			a(href='#') Фотогалерея
+	h3.js-title-sosn-menu Сосновый квартал
+	ul.links_quarter.js-title-sosn-content
 		li 
-			h3 
-				a(href='#') Сосновый квартал
+			a(href='#') О квартале
+		li 
+			a(href='#') Цены и условия
+		li 
+			a(href='#') Фотогалерея
 
 	ul.links_all
 		li 
