--- a/src/sass/_galery.scss
+++ b/src/sass/_galery.scss
@@ -1,5 +1,5 @@
 .logo_quarter {
-	margin: 0 20px;
+	margin: 20px;
 	background-color: $prime-color;
 	text-align: center;
 	img {
@@ -38,7 +38,7 @@
     	}
     	.foto_galerias-item-descript {
     		font-size: 2rem;
-    		color: $grey;
+    		color: $grey_dark;
     	}
 	}
 
