--- a/src/pug/about-quarter.pug
+++ b/src/pug/about-quarter.pug
@@ -54,8 +54,28 @@ block content
 				p Велосипедная и беговая дорожки, пешие маршруты, ворк-аут и фитнес-зоны, стадион, баскетбольная площадка, зимний каток и др.
 				p Скандинавский стиль зон отдыха, много светлого дерева, ландшафтный дизайн во дворах.
 				p И конечно же, Кедровому кварталу присущи все свойства и характеристики района в целом!
-
-		include includes/_link_back
+		section.title-about_menu.__margin-20
+			mixin house
+				div.house
+					h4.house-title Дом 6
+					p.house-descript (9.6 по генплану), 19 этажей
+					img(src="img/slide2.jpg" alt="alt")
+					+a('btn-green btn-uppercase btn-center', 'подобрать по параметрам','#')
+			div.wrapp-house
+				+house
+				+house
+				+house
+			
+			div.wrapp_about_menu
+				h3 Кедровый квартал
+				ul
+					li.active
+						a(href = '#') О квартале
+					li
+						a(href = '#') Цены и условия
+					li
+						a(href = '#') Фотогалерея
+		//- include includes/_link_back
 	include includes/_footer
 
 	include includes/_menu
