--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -25,7 +25,7 @@
 	}
 	.slide__item4 {
 		p {
-			color: $grey;
+			color: $grey_dark;
 			margin: 0 0 18px 0;
 			width: 70%;
 		}
@@ -63,4 +63,25 @@
 		margin: 25px 0;
 	}
 }
-
+.wrapp_about_menu {
+	text-align: center;
+	padding: 80px 0;	
+	h3 {
+		padding-bottom: 20px;
+	}
+	ul {
+		li {
+			padding-bottom: 20px;
+			a {
+				color: $prime-color;
+				text-decoration: none;
+				font-size: 2.5rem;
+			}
+		}
+		li.active {
+			a {
+				color: $grey_dark;
+			}
+		}
+	}
+}
