--- a/src/sass/_loyalty.scss
+++ b/src/sass/_loyalty.scss
@@ -28,7 +28,7 @@
 					font-size: 2.5rem;
 				}
 				.note {
-					color: $grey;
+					color: $grey_dark;
 					font-size: 2rem;
 				}
 				.links {
