--- a/src/pug/includes/_a.pug
+++ b/src/pug/includes/_a.pug
@@ -1,4 +1,5 @@
 mixin a(className, text, link)
 	-var classBtn = 'btn '+ className;
-	a(href=link class=classBtn )= text
+	object
+		a(href=link class=classBtn )= text
 		
