--- a/src/pug/includes/_footer.pug
+++ b/src/pug/includes/_footer.pug
@@ -1,23 +1,23 @@
 include _btn
 include _a
 footer.footer.footer__footer
-	h3.js-title-kedr-menu Кедровый квартал
-	ul.links_quarter.js-title-kedr-content
-		li 
-			a(href='#') О квартале
-		li 
-			a(href='#') Цены и условия
-		li 
-			a(href='#') Фотогалерея
-	h3.js-title-sosn-menu Сосновый квартал
-	ul.links_quarter.js-title-sosn-content
-		li 
-			a(href='#') О квартале
-		li 
-			a(href='#') Цены и условия
-		li 
-			a(href='#') Фотогалерея
-
+	div.wrapp-menu_footer
+		h3.js-title-kedr-menu Кедровый квартал
+		ul.links_quarter.js-title-kedr-content
+			li 
+				a(href='#') О квартале
+			li 
+				a(href='#') Цены и условия
+			li 
+				a(href='#') Фотогалерея
+		h3.js-title-sosn-menu Сосновый квартал
+		ul.links_quarter.js-title-sosn-content
+			li 
+				a(href='#') О квартале
+			li 
+				a(href='#') Цены и условия
+			li 
+				a(href='#') Фотогалерея
 	ul.links_all
 		li 
 			h3 
