--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -34,7 +34,7 @@ block content
 				+btn('btn-black_noactive btn-tab_right js_tab', 'Сосновый' , 'tab2', 'btn-black', 'btn-black_noactive')
 
 			mixin house
-				div.house
+				a.house(href='#')
 					h4.house-title Дом 6
 					p.house-descript (9.6 по генплану), 19 этажей
 					img(src="img/slide2.jpg" alt="alt")
