--- a/src/pug/price.pug
+++ b/src/pug/price.pug
@@ -30,7 +30,7 @@ block content
 					li +375 29 555-000-0
 		section.title-price_house
 			mixin house
-				div.house
+				a(href='#').house
 					h4.house-title Дом 6
 					p.house-descript.no_margin (9.6 по генплану), 19 этажей
 					p.house-descript Срок сдачи: сдан в 1 квартале 2016 
