--- a/src/sass/_primary.scss
+++ b/src/sass/_primary.scss
@@ -38,7 +38,7 @@ h3 { font-size: 3.1rem; font-family: $font_m }
 h4 { font-size: 2.7rem; font-family: $font_m }
 p,li { font-size: 2rem;  font-family: $font_r}
 ul { list-style-type: none; }
-
+a {text-decoration: none;}
 .overflow-hidden, .overflow-hidden-1, .overflow-hidden-2 {
 	overflow: hidden;
 } 
