--- a/bitrix/templates/main/about-quarter.html
+++ b/bitrix/templates/main/about-quarter.html
@@ -31,21 +31,12 @@
           <div class="wrapp_about_quarter">
             <h3 class="about_quarter-h3">О кедровом квартале</h3>
             <p class="about_quarter-description">Кедровый — первый из 11 кварталов Новой Боровой. До конца 2018 года в квартале завершится строительство всех квартир и детского садика на 150 мест. Жители первых трех домов уже получили ключи от своих квартир и смогли оценить комфорт и уют нового района.</p>
-                  <div class="slider-init-2_1 slider-custom2 slider-custom4" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}">
-                    <div class="slide__item4"><img src="img/slide1.jpg"></div>
-                    <div class="slide__item4"><img src="img/slide1.jpg"></div>
-                    <div class="slide__item4"><img src="img/slide1.jpg"></div>
+                  <div class="slider-init-2_1 slider-custom2 slider-custom4" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}"><a class="slide__item4" href="#"><img src="img/slide1.jpg"></a><a class="slide__item4" href="#"><img src="img/slide1.jpg"></a><a class="slide__item4" href="#"><img src="img/slide1.jpg"></a>
                   </div>
-                  <div class="slider-init-2_2 slider-custom2 slider-custom4" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}">
-                    <div class="slide__item4">
-                      <p>1Красивые, счастливые и интересные – это ваши новые соседи!</p>
-                    </div>
-                    <div class="slide__item4">
-                      <p>Красивые, счастливые и интересные – это ваши новые соседи!</p>
-                    </div>
-                    <div class="slide__item4">
-                      <p>2Красивые, счастливые и интересные – это ваши новые соседи!</p>
-                    </div>
+                  <div class="slider-init-2_2 slider-custom2 slider-custom4" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}"><a class="slide__item4" href="#">
+                      <p>1Красивые, счастливые и интересные – это ваши новые соседи!</p></a><a class="slide__item4" href="#">
+                      <p>Красивые, счастливые и интересные – это ваши новые соседи!</p></a><a class="slide__item4" href="#">
+                      <p>2Красивые, счастливые и интересные – это ваши новые соседи!</p></a>
                   </div>
           </div>
         </section>
@@ -75,21 +66,12 @@
           <div class="wrapp_about_quarter">
             <h4 class="about_quarter-h4">Развитая инфраструктура</h4>
             <p class="about_quarter-description">Центральная площадь с амфитеатром, «сухим »фонтаном и спортивными зонами и летним кафе.</p>
-                  <div class="slider-init-2_1 slider-custom2 slider-custom4" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}">
-                    <div class="slide__item4"><img src="img/slide1.jpg"></div>
-                    <div class="slide__item4"><img src="img/slide1.jpg"></div>
-                    <div class="slide__item4"><img src="img/slide1.jpg"></div>
+                  <div class="slider-init-2_1 slider-custom2 slider-custom4" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}"><a class="slide__item4" href="#"><img src="img/slide1.jpg"></a><a class="slide__item4" href="#"><img src="img/slide1.jpg"></a><a class="slide__item4" href="#"><img src="img/slide1.jpg"></a>
                   </div>
-                  <div class="slider-init-2_2 slider-custom2 slider-custom4" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}">
-                    <div class="slide__item4">
-                      <p>Игровые площадки от ведущих мировых брендов, а также построенные по собственным специально разработанным дизайн-проектам.</p>
-                    </div>
-                    <div class="slide__item4">
-                      <p>Игровые площадки от ведущих мировых брендов, а также построенные по собственным специально разработанным дизайн-проектам.</p>
-                    </div>
-                    <div class="slide__item4">
-                      <p>Игровые площадки от ведущих мировых брендов, а также построенные по собственным специально разработанным дизайн-проектам.</p>
-                    </div>
+                  <div class="slider-init-2_2 slider-custom2 slider-custom4" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}"><a class="slide__item4" href="#">
+                      <p>Игровые площадки от ведущих мировых брендов, а также построенные по собственным специально разработанным дизайн-проектам.</p></a><a class="slide__item4" href="#">
+                      <p>Игровые площадки от ведущих мировых брендов, а также построенные по собственным специально разработанным дизайн-проектам.</p></a><a class="slide__item4" href="#">
+                      <p>Игровые площадки от ведущих мировых брендов, а также построенные по собственным специально разработанным дизайн-проектам.</p></a>
                   </div>
           </div>
         </section>
@@ -106,15 +88,18 @@
           <div class="wrapp-house">
                       <div class="house">
                         <h4 class="house-title">Дом 6</h4>
-                        <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt"><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a>
+                        <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt">
+                              <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object>
                       </div>
                       <div class="house">
                         <h4 class="house-title">Дом 6</h4>
-                        <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt"><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a>
+                        <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt">
+                              <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object>
                       </div>
                       <div class="house">
                         <h4 class="house-title">Дом 6</h4>
-                        <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt"><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a>
+                        <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt">
+                              <object><a class="btn btn-green btn-uppercase btn-center" href="#">подобрать по параметрам</a></object>
                       </div>
           </div>
           <div class="wrapp_about_menu">
@@ -128,18 +113,20 @@
         </section>
       </div>
       <footer class="footer footer__footer">
-        <h3 class="js-title-kedr-menu">Кедровый квартал</h3>
-        <ul class="links_quarter js-title-kedr-content">
-          <li> <a href="#">О квартале</a></li>
-          <li> <a href="#">Цены и условия</a></li>
-          <li> <a href="#">Фотогалерея</a></li>
-        </ul>
-        <h3 class="js-title-sosn-menu">Сосновый квартал</h3>
-        <ul class="links_quarter js-title-sosn-content">
-          <li> <a href="#">О квартале</a></li>
-          <li> <a href="#">Цены и условия</a></li>
-          <li> <a href="#">Фотогалерея</a></li>
-        </ul>
+        <div class="wrapp-menu_footer">
+          <h3 class="js-title-kedr-menu">Кедровый квартал</h3>
+          <ul class="links_quarter js-title-kedr-content">
+            <li> <a href="#">О квартале</a></li>
+            <li> <a href="#">Цены и условия</a></li>
+            <li> <a href="#">Фотогалерея</a></li>
+          </ul>
+          <h3 class="js-title-sosn-menu">Сосновый квартал</h3>
+          <ul class="links_quarter js-title-sosn-content">
+            <li> <a href="#">О квартале</a></li>
+            <li> <a href="#">Цены и условия</a></li>
+            <li> <a href="#">Фотогалерея</a></li>
+          </ul>
+        </div>
         <ul class="links_all">
           <li> 
             <h3> <a href="#">Программа лояльности</a></h3>
@@ -153,7 +140,8 @@
           <li> 
             <h3> </h3>
           </li>
-        </ul><a class="btn btn-green btn-center btn-uppercase" href="#">подобрать квартиру</a>
+        </ul>
+              <object><a class="btn btn-green btn-center btn-uppercase" href="#">подобрать квартиру</a></object>
         <ul class="social_links">
           <li><a href="#"><svg version="1.1" id="Layer_21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-420.9 250.7 20.3 11.5" enable-background="new -420.9 250.7 20.3 11.5" xml:space="preserve"><path d="M-401.5,251.2h-3.3c-0.3,0-0.5,0.2-0.7,0.4c0,0-1.3,2.4-1.7,3.2c-1.1,2.2-1.9,1.5-1.9,0.5v-3.5c0-0.6-0.5-1.1-1.1-1.1h-2.5c-0.7-0.1-1.3,0.3-1.8,0.8c0,0,1.3-0.2,1.3,1.5c0,0.4,0,1.6,0,2.6c0,0.4-0.3,0.7-0.7,0.7c-0.2,0-0.4-0.1-0.6-0.2c-1-1.4-1.9-2.9-2.5-4.5c-0.1-0.2-0.4-0.4-0.6-0.4c-0.7,0-2.1,0-3,0c-0.3,0-0.5,0.2-0.5,0.5c0,0.1,0,0.1,0,0.2c0.9,2.5,4.8,10.3,9.3,10.3h1.9c0.4,0,0.7-0.3,0.7-0.7v-1.1c0-0.4,0.3-0.7,0.7-0.7c0.2,0,0.4,0.1,0.5,0.2l2.2,2.1c0.2,0.2,0.5,0.3,0.7,0.3h3c1.4,0,1.4-1,0.6-1.8c-0.5-0.5-2.5-2.6-2.5-2.6c-0.3-0.4-0.4-0.9-0.1-1.3c0.6-0.8,1.7-2.2,2.1-2.8C-401,252.9-400,251.2-401.5,251.2z"/></svg></a></li>
           <li><a href="#"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="259.6 84.4 351 239.5" enable-background="new 259.6 84.4 351 239.5" xml:space="preserve"><path d="M573.2,84.4H297c-20.6,0-37.4,16.8-37.4,37.4v164.6c0,20.6,16.8,37.4,37.4,37.4h276.2c20.6,0,37.4-16.8,37.4-37.4V121.8C610.6,101.2,593.8,84.4,573.2,84.4z M385.6,261.2V146.9l99,57.1L385.6,261.2z"/></svg></a></li>
@@ -182,7 +170,8 @@
               <li> <a href="#">Цены и условия</a></li>
               <li> <a href="#">Фотогалерея</a></li>
             </ul>
-          </div><a class="btn btn-white btn-center btn-uppercase">подобрать квартиру</a>
+          </div>
+                <object><a class="btn btn-white btn-center btn-uppercase">подобрать квартиру</a></object>
           <ul class="links_quarter">
             <li> <a href="#">Программа лояльности</a></li>
             <li> <a href="#">О застройщике</a></li>
