--- a/bitrix/templates/main/filters-resalt-item.html
+++ b/bitrix/templates/main/filters-resalt-item.html
@@ -83,18 +83,20 @@
         </section>
       </div>
       <footer class="footer footer__footer">
-        <h3 class="js-title-kedr-menu">Кедровый квартал</h3>
-        <ul class="links_quarter js-title-kedr-content">
-          <li> <a href="#">О квартале</a></li>
-          <li> <a href="#">Цены и условия</a></li>
-          <li> <a href="#">Фотогалерея</a></li>
-        </ul>
-        <h3 class="js-title-sosn-menu">Сосновый квартал</h3>
-        <ul class="links_quarter js-title-sosn-content">
-          <li> <a href="#">О квартале</a></li>
-          <li> <a href="#">Цены и условия</a></li>
-          <li> <a href="#">Фотогалерея</a></li>
-        </ul>
+        <div class="wrapp-menu_footer">
+          <h3 class="js-title-kedr-menu">Кедровый квартал</h3>
+          <ul class="links_quarter js-title-kedr-content">
+            <li> <a href="#">О квартале</a></li>
+            <li> <a href="#">Цены и условия</a></li>
+            <li> <a href="#">Фотогалерея</a></li>
+          </ul>
+          <h3 class="js-title-sosn-menu">Сосновый квартал</h3>
+          <ul class="links_quarter js-title-sosn-content">
+            <li> <a href="#">О квартале</a></li>
+            <li> <a href="#">Цены и условия</a></li>
+            <li> <a href="#">Фотогалерея</a></li>
+          </ul>
+        </div>
         <ul class="links_all">
           <li> 
             <h3> <a href="#">Программа лояльности</a></h3>
@@ -108,7 +110,8 @@
           <li> 
             <h3> </h3>
           </li>
-        </ul><a class="btn btn-green btn-center btn-uppercase" href="#">подобрать квартиру</a>
+        </ul>
+              <object><a class="btn btn-green btn-center btn-uppercase" href="#">подобрать квартиру</a></object>
         <ul class="social_links">
           <li><a href="#"><svg version="1.1" id="Layer_21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-420.9 250.7 20.3 11.5" enable-background="new -420.9 250.7 20.3 11.5" xml:space="preserve"><path d="M-401.5,251.2h-3.3c-0.3,0-0.5,0.2-0.7,0.4c0,0-1.3,2.4-1.7,3.2c-1.1,2.2-1.9,1.5-1.9,0.5v-3.5c0-0.6-0.5-1.1-1.1-1.1h-2.5c-0.7-0.1-1.3,0.3-1.8,0.8c0,0,1.3-0.2,1.3,1.5c0,0.4,0,1.6,0,2.6c0,0.4-0.3,0.7-0.7,0.7c-0.2,0-0.4-0.1-0.6-0.2c-1-1.4-1.9-2.9-2.5-4.5c-0.1-0.2-0.4-0.4-0.6-0.4c-0.7,0-2.1,0-3,0c-0.3,0-0.5,0.2-0.5,0.5c0,0.1,0,0.1,0,0.2c0.9,2.5,4.8,10.3,9.3,10.3h1.9c0.4,0,0.7-0.3,0.7-0.7v-1.1c0-0.4,0.3-0.7,0.7-0.7c0.2,0,0.4,0.1,0.5,0.2l2.2,2.1c0.2,0.2,0.5,0.3,0.7,0.3h3c1.4,0,1.4-1,0.6-1.8c-0.5-0.5-2.5-2.6-2.5-2.6c-0.3-0.4-0.4-0.9-0.1-1.3c0.6-0.8,1.7-2.2,2.1-2.8C-401,252.9-400,251.2-401.5,251.2z"/></svg></a></li>
           <li><a href="#"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="259.6 84.4 351 239.5" enable-background="new 259.6 84.4 351 239.5" xml:space="preserve"><path d="M573.2,84.4H297c-20.6,0-37.4,16.8-37.4,37.4v164.6c0,20.6,16.8,37.4,37.4,37.4h276.2c20.6,0,37.4-16.8,37.4-37.4V121.8C610.6,101.2,593.8,84.4,573.2,84.4z M385.6,261.2V146.9l99,57.1L385.6,261.2z"/></svg></a></li>
@@ -137,7 +140,8 @@
               <li> <a href="#">Цены и условия</a></li>
               <li> <a href="#">Фотогалерея</a></li>
             </ul>
-          </div><a class="btn btn-white btn-center btn-uppercase">подобрать квартиру</a>
+          </div>
+                <object><a class="btn btn-white btn-center btn-uppercase">подобрать квартиру</a></object>
           <ul class="links_quarter">
             <li> <a href="#">Программа лояльности</a></li>
             <li> <a href="#">О застройщике</a></li>
