--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -77,9 +77,14 @@
 }
 
 .slider-custom1 {
-	margin: 20px;
+	margin: 20px 0;
 	.slick-arrow {
 		display: none !important;
+	}
+	.slide__item {
+		img {
+			padding: 0 20px;
+		}
 	}
 }
 
@@ -87,6 +92,7 @@
 	margin: 20px 0 40px 0;
 	.slide__item2 {
 		padding: 0 20px;
+		color: #000;
 		p {
 			color: $grey_dark;
 			padding-bottom: 10px;
@@ -136,9 +142,11 @@
 
 .slide__item {
 	// min-height: 540px;
+	color: #000;
 	img {
 		position: absolute;
 		z-index: -1;
+		// padding: 0 20px;
 	}
 	h2 {
 		position: relative;
@@ -216,6 +224,9 @@
 	// width: 48%;
 	// display: inline-block;
 	flex-basis: 48%;
+	display: block;
+	text-decoration: none;
+	color: #000;
 	.house-descript {
 		color: #858585;
 		margin-bottom: 10px;
@@ -445,6 +456,9 @@
 	}
 	.btn {
 		margin-top: 35px !important;
+	}
+	.wrapp-menu_footer {
+		flex-basis: 50%;
 	}
 }
 
