--- a/bitrix/templates/main/map.html
+++ b/bitrix/templates/main/map.html
@@ -12,12 +12,12 @@
     <!--BEGIN out-->
     <div class="out">
       <header class="header"><a href="#"><img class="header__logo" src="img/logo.png"></a>
-        <p class="header__text header__text-ipad">+375 29 000 00 00</p>
+        <p class="header__text header__text-ipad"><a href="tel:+1234567890">+375 29 000 00 00</a></p>
         <div class="header__menu" id="header__menu">
           <label class="hamburger js-menu-open" for="hamburger" id=""><span></span><span></span><span></span></label>
         </div>
       </header>
-      <h3 class="header__text-iphone header__text-iphone-border">+375 29 000 00 00</h3>
+      <p class="h3 header__text-iphone header__text-iphone-border"> <a href="tel:+1234567890">+375 29 000 00 00</a></p>
       <ul>
         <li><a href="/" style="true">Главная </a></li>
         <li><a href="/about-quarter.html">О кедровом квартале</a></li>
@@ -33,32 +33,27 @@
       </ul>
       <footer class="footer footer__footer">
         <div class="wrapp-menu_footer">
-          <h3 class="js-title-kedr-menu">Кедровый квартал</h3>
-          <ul class="links_quarter js-title-kedr-content">
-            <li> <a href="#">О квартале</a></li>
-            <li> <a href="#">Цены и условия</a></li>
-            <li> <a href="#">Фотогалерея</a></li>
-          </ul>
-          <h3 class="js-title-sosn-menu">Сосновый квартал</h3>
-          <ul class="links_quarter js-title-sosn-content">
-            <li> <a href="#">О квартале</a></li>
-            <li> <a href="#">Цены и условия</a></li>
-            <li> <a href="#">Фотогалерея</a></li>
-          </ul>
+          <div>
+            <p class="h3 js-drop">Кедровый квартал</p>
+            <ul class="links_quarter js-drop-content">
+              <li> <a href="#">О квартале</a></li>
+              <li> <a href="#">Цены и условия</a></li>
+              <li> <a href="#">Фотогалерея</a></li>
+            </ul>
+          </div>
+          <div>
+            <p class="h3 js-drop">Сосновый квартал</p>
+            <ul class="links_quarter links_quarter-drop js-drop-content">
+              <li> <a href="#">О квартале</a></li>
+              <li> <a href="#">Цены и условия</a></li>
+              <li> <a href="#">Фотогалерея</a></li>
+            </ul>
+          </div>
         </div>
-        <ul class="links_all">
-          <li> 
-            <h3> <a href="#">Программа лояльности</a></h3>
-          </li>
-          <li> 
-            <h3> <a href="#">Новости и акции</a></h3>
-          </li>
-          <li> 
-            <h3> <a href="#">Отдел продаж</a></h3>
-          </li>
-          <li> 
-            <h3> </h3>
-          </li>
+        <ul class="links_all links_quarter">
+          <li> <a href="#">Программа лояльности</a></li>
+          <li> <a href="#">Новости и акции</a></li>
+          <li> <a href="#">Отдел продаж </a></li>
         </ul>
               <object><a class="btn btn-green btn-center btn-uppercase" href="#">подобрать квартиру</a></object>
         <ul class="social_links">
