--- a/src/pug/includes/_header.pug
+++ b/src/pug/includes/_header.pug
@@ -1,11 +1,13 @@
 header.header
 	a(href='#')
 		img.header__logo(src='img/logo.png')
-	p.header__text.header__text-ipad +375 29 000 00 00
+	p.header__text.header__text-ipad
+		a(href="tel:+1234567890") +375 29 000 00 00
 	div.header__menu#header__menu
 		//- input(type="checkbox" id="hamburger" hidden="hidden")
 		label(for="hamburger" class="hamburger js-menu-open" id="")
 			span
 			span
 			span
-h3.header__text-iphone.header__text-iphone-border +375 29 000 00 00
+p.h3.header__text-iphone.header__text-iphone-border 
+	a(href="tel:+1234567890") +375 29 000 00 00
