--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -22,6 +22,9 @@
 		font-size: 3rem;
 		font-family: 'pf_medium', sans-serif;
 		font-weight: bold;
+		a {
+			color: #000;
+		}
 	}
 	.header__menu {
 		position: absolute;
@@ -43,6 +46,9 @@
 	text-align: center;
 	padding: 25px 0;	
 	margin: 0 20px; 
+	a {
+		color: #000;
+	}
 }
 .header__text-iphone-border {
 	border-bottom: 1px solid $grey;
@@ -426,10 +432,11 @@
 		text-align: center;
 		margin-bottom: 20px;
 	}
-	h3 {
+	.h3 {
 		padding: 20px 0;
 		text-align: center;
 		width: 100%;
+		font-size: 3.1rem;
 		a {
 			color: #fff;
 			text-decoration: none;
@@ -459,6 +466,9 @@
 	}
 	.wrapp-menu_footer {
 		flex-basis: 50%;
+	}
+	.links_quarter-drop {
+		display: none;
 	}
 }
 
