--- a/src/sass/lib/_sprite.sass
+++ b/src/sass/lib/_sprite.sass
@@ -1,8 +1,9 @@
 $icons: (0:0)
-$icons: map-merge($icons,(arrow-down: (X: -54px, Y:-9px, W: 20px, H: 9px, TW: 101px, TH: 47px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(check: (X: 0px, Y:0px, W: 50px, H: 38px, TW: 101px, TH: 47px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(codedby: (X: -54px, Y:0px, W: 47px, H: 5px, TW: 101px, TH: 47px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(coderiver: (X: 0px, Y:-42px, W: 49px, H: 5px, TW: 101px, TH: 47px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(arrow-down: (X: -132px, Y:-60px, W: 20px, H: 9px, TW: 182px, TH: 128px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(check: (X: -132px, Y:0px, W: 50px, H: 38px, TW: 182px, TH: 128px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(close: (X: 0px, Y:0px, W: 128px, H: 128px, TW: 182px, TH: 128px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(codedby: (X: -132px, Y:-51px, W: 47px, H: 5px, TW: 182px, TH: 128px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(coderiver: (X: -132px, Y:-42px, W: 49px, H: 5px, TW: 182px, TH: 128px, IMG: '../img/icons.png')))
 
 
 // Gets an attribute from the sass map
@@ -43,11 +44,17 @@ $icons: map-merge($icons,(coderiver: (X: 0px, Y:-42px, W: 49px, H: 5px, TW: 101p
 //	width: 20px
 //	height: 9px
 //	background-image: url('../img/icons.png')
-//	background-position: -54px -9px
+//	background-position: -132px -60px
 //
 //.icon-check
 //	width: 50px
 //	height: 38px
+//	background-image: url('../img/icons.png')
+//	background-position: -132px 0px
+//
+//.icon-close
+//	width: 128px
+//	height: 128px
 //	background-image: url('../img/icons.png')
 //	background-position: 0px 0px
 //
@@ -55,11 +62,11 @@ $icons: map-merge($icons,(coderiver: (X: 0px, Y:-42px, W: 49px, H: 5px, TW: 101p
 //	width: 47px
 //	height: 5px
 //	background-image: url('../img/icons.png')
-//	background-position: -54px 0px
+//	background-position: -132px -51px
 //
 //.icon-coderiver
 //	width: 49px
 //	height: 5px
 //	background-image: url('../img/icons.png')
-//	background-position: 0px -42px
+//	background-position: -132px -42px
 //
