--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -749,7 +749,7 @@
 		background-color: #fff;
 		padding: 30px;
 		text-align: center;
-		display: none;
+		overflow: auto;
 		.title  {
 			font-family: $font_m;
 		}
